# log-checker-mcp

./: .env.example  .gitignore  AGENTFORCE_VIBES_CONFIG.md  AGENTFORCE_VIBES_SETUP.md  COMPARISON.md  DEPLOYMENT.md  FAISS_IMPLEMENTATION.md  FAISS_QUICKSTART.md  LICENSE  LINKEDIN_POST.md  MIGRATION_TO_LOCAL.md  PRODUCTION_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  __main__.py  agentforce-vibes-mcp-config.json  claude_desktop_config.json  config.py  http_server.py  pyproject.toml  requirements.txt  server.py  setup-github.bat  setup-github.sh  start_server.bat
utils/: __init__.py  chunking_utils.py  embeddings.py  error_extraction.py  faiss_utils.py  file_utils.py  logging_utils.py
