[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-analyzer-mcp"
version = "1.0.0"
description = "FAISS-powered log analysis MCP server with semantic search"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Suriya ML", email = "suriya@example.com"}
]
keywords = ["mcp", "log-analyzer", "faiss", "semantic-search", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=0.9.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
]

[project.urls]
Homepage = "https://github.com/suriya-ML/log-checker-mcp"
Repository = "https://github.com/suriya-ML/log-checker-mcp"
Issues = "https://github.com/suriya-ML/log-checker-mcp/issues"

[project.scripts]
log-analyzer-mcp = "server:main"

[tool.setuptools]
packages = ["utils"]
py-modules = ["server", "config"]
